plain_text.txt
0000000000000000

*  Executing task: C/C++: clang build active file 

Starting build...
/usr/bin/clang -fcolor-diagnostics -fansi-escape-codes -g /Users/oleksiy/git/ICAO/src/application/*.c /Users/oleksiy/git/ICAO/src/hal/hal_vcard/*.cpp /Users/oleksiy/git/ICAO/src/hal/hal_common/*.c /Users/oleksiy/git/ICAO/src/lib/*.c -I/Users/oleksiy/git/ICAO/src -I/Users/oleksiy/git/ICAO/src/application -I/Users/oleksiy/git/ICAO/src/hal/hal_vcard -I/Users/oleksiy/git/ICAO/src/hal/hal_common -I/Users/oleksiy/git/ICAO/src/lib -I/Users/oleksiy/git/ICAO/src/../assemblies/vcard -I/Users/oleksiy/git/ICAO/assemblies/vcard -o /Users/oleksiy/git/ICAO/src/hal/hal_vcard/hal
/Users/oleksiy/git/ICAO/src/hal/hal_vcard/hal.cpp:47:28: error: use of undeclared identifier 'filesystem'
   47 |         if( (fileNVM != NULL) && (filesystem::file_size( nvmFullName ) != 0) )
      |                                   ^
/Users/oleksiy/git/ICAO/src/hal/hal_vcard/hal.cpp:51:37: error: use of undeclared identifier 'filesystem'
   51 |                 MUST_VCARD( sizeof( gCardNVM ) == filesystem::file_size( nvmFullName ), "Wrong NVM file size" );
      |                                                   ^
2 errors generated.
/Users/oleksiy/git/ICAO/src/hal/hal_vcard/vcard.cpp:22:21: error: expected namespace name
   22 | namespace fs = std::filesystem;
      |                ~~~~~^
/Users/oleksiy/git/ICAO/src/hal/hal_vcard/vcard.cpp:106:25: error: use of undeclared identifier 'fs'
  106 | void readIniFile( const fs::path & fileName, Settings & settings )
      |                         ^
/Users/oleksiy/git/ICAO/src/hal/hal_vcard/vcard.cpp:114:7: error: use of undeclared identifier 'fs'
  114 |         if( !fs::exists( fileName ) )
      |              ^
/Users/oleksiy/git/ICAO/src/hal/hal_vcard/vcard.cpp:151:2: error: use of undeclared identifier 'fs'
  151 |         fs::path cfgPath = configDirectory;
      |         ^
/Users/oleksiy/git/ICAO/src/hal/hal_vcard/vcard.cpp:154:10: error: use of undeclared identifier 'fs'
  154 |         while( !fs::exists( cfgPath ) )
      |                 ^
/Users/oleksiy/git/ICAO/src/hal/hal_vcard/vcard.cpp:156:3: error: use of undeclared identifier 'fs'
  156 |                 fs::path newPath = cfgPath.parent_path().parent_path() / cfgFilename;
      |                 ^
/Users/oleksiy/git/ICAO/src/hal/hal_vcard/vcard.cpp:164:6: error: use of undeclared identifier 'fs'
  164 |         if( fs::exists( cfgPath ) )
      |             ^
7 errors generated.
/Users/oleksiy/git/ICAO/src/hal/hal_vcard/vcard_main.cpp:20:21: error: expected namespace name
   20 | namespace fs = std::filesystem;
      |                ~~~~~^
/Users/oleksiy/git/ICAO/src/hal/hal_vcard/vcard_main.cpp:74:32: error: use of undeclared identifier 'fs'
   74 |                 std::string applicationDir = fs::path( argv[ 0 ] ).parent_path().string();
      |                                              ^
/Users/oleksiy/git/ICAO/src/hal/hal_vcard/vcard_main.cpp:77:13: error: use of undeclared identifier 'fs'
   77 |                 initNVM( (fs::path( applicationDir ) / nvmFileName).string() );
      |                           ^
3 errors generated.

Build finished with error(s).

 *  The terminal process terminated with exit code: -1. 
 *  Terminal will be reused by tasks, press any key to close it.



{
    "tasks": [
        {
            "type": "cppbuild",
            "label": "C/C++: clang build active file",
            "command": "/usr/bin/clang",
            "args": [
                "-fcolor-diagnostics",
                "-fansi-escape-codes",
                "-g",
                "${workspaceFolder}/application/*.c",
                "${workspaceFolder}/hal/hal_vcard/*.cpp",
                "${workspaceFolder}/hal/hal_common/*.c",
                "${workspaceFolder}/lib/*.c",
                //
                "-I${workspaceFolder}",
                "-I${workspaceFolder}/application",
                "-I${workspaceFolder}/hal/hal_vcard",
                "-I${workspaceFolder}/hal/hal_common",
                "-I${workspaceFolder}/lib",
                "-I${workspaceFolder}/../assemblies/vcard",
                "-I/Users/oleksiy/git/ICAO/assemblies/vcard",
                "-o",
                "${fileDirname}/${fileBasenameNoExtension}"
            ],
            "options": {
                "cwd": "${workspaceFolder}"
            },
            "problemMatcher": [
                "$gcc"
            ],
            "group": {
                "kind": "build",
                "isDefault": true
            },
            "detail": "Task generated by Debugger."
        }
    ],
    "version": "2.0.0"
}
